Finish gdoc-cms

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="page-name" content="contact">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,8 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
     <script src="./resources/scripts/menu.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="./resources/scripts/loadsheet.js"></script>
 
-    <title>Amazing Grace of Cape Cod--About us</title>
+    <title>Amazing Grace of Cape Cod--Contact us</title>
 </head>
 <body>
     <header>
@@ -92,19 +95,8 @@
                 <h3></h3>
             </div>
         </section>
-        <section class="page-content">
-            <div class="sub-section">
-                <h2>Email</h2>
-                <p>E-mail us at <a href="mailto:amazinggrace.capecod@gmail.com">amazinggrace.capecod@gmail.com</a></p>
-            </div>
-            <div class="sub-section">
-                <h2>Mailing address</h2>
-                <address><p>Amazing Grace of Cape Cod Inc., P.O. Box 636,&nbsp;Centerville, MA &nbsp;02632</p></address>
-            </div>
-            <div class="sub-section">
-                <h2>Send us a message right now</h2>
-                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2">Click here to send us a message through our online form.</a></p>
-            </div>
+        <section class="page-content" id="gdoc-content">
+                <!-- Google doc content will be inserted here via javascript. -->
         </section>
     </main>
     <footer>
