--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="page-name" content="donate">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,8 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
     <script src="./resources/scripts/menu.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="./resources/scripts/loadsheet.js"></script>
 
-    <title>Amazing Grace of Cape Cod--About us</title>
+    <title>Amazing Grace of Cape Cod--Donate</title>
 </head>
 <body>
     <header>
@@ -92,46 +95,8 @@
                 <h3>Help us to nurture positive and healthy futures</h3>
             </div>
         </section>
-        <section class="page-content">
-            <div class="sub-section">
-                <h2>Ways to give to Amazing Grace</h2>
-                <div class="paypal-donate">
-                    <h4>Donate online using Paypal</h4>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="3YQNM4VPXRRRY">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                    <br/>
-                </div>
-                <div class="paper-donate">
-                    <h4><a href="resources/pdfs/AmazingGrace_donor_form.pdf" target="_blank">Download and print a form to mail in.</a></h4>
-                    <p>Send contributions made out to Amazing Grace of Cape Cod Inc.</p>
-                    <p>Amazing Grace of Cape Cod Inc.<br/>
-                       P.O. Box 636<br/>
-                       Centerville, MA 02632 </p>
-                </div>
-            </div>
-            <div class="sub-section">
-                <h2>How your contribution helps</h2>
-                <ul>
-                    <li>$500 sponsors an Amazing Grace Camper (7-11 years old at Camp Burgess).</li>
-                    <li>$900 sponsors an AGII Camper (12+ at Camp Hayward).</li>
-                    <li>$100 provides a backpack filled with school supplies. </li>
-                    <li>$50 provides a sleeping bag.</li>
-                    <li>$25 provides an embroidered Amazing Grace shirt.</li> 
-                    <li>$10 provides a beach towel.</li>                   
-                </ul> 
-                <p>All of our programs are offered at no cost to the children participating, and are funded completely by donations and grants.  
-                    Your generous support will help us to continue nurturing positive futures for these children.</p>
-                <p>Amazing Grace of Cape Cod, Inc. is a 501(c)(3) organization and all contributions are tax deductible.</p>
-            </div>
-            <div class="sub-section">
-                <h2>In-kind donations</h2>
-                <p><a href="contact.html">Contact us</a> to inquire about making an in-kind donation.</p>
-                <p>Consider <a href="volunteer.html">volunteering</a> to help us prepare for the August camp program, or to work with our amazing kids. </p> 
-            </div>
+        <section class="page-content" id="gdoc-content">
+                <!-- Google doc content will be inserted here via javascript. -->
         </section>
     </main>
     <footer>
