--- a/forms.html
+++ b/forms.html
@@ -16,7 +16,7 @@
     
     <script src="./resources/scripts/menu.js"></script>
 
-    <title>Amazing Grace of Cape Cod--About us</title>
+    <title>Amazing Grace of Cape Cod--Forms</title>
 </head>
 <body>
     <header>
