--- a/impact.html
+++ b/impact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="page-name" content="impact">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,8 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
     <script src="./resources/scripts/menu.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="./resources/scripts/loadsheet.js"></script>
 
-    <title>Amazing Grace of Cape Cod--About us</title>
+    <title>Amazing Grace of Cape Cod--Our impact</title>
 </head>
 <body>
     <header>
@@ -93,48 +96,8 @@
                 <h3></h3>
             </div>
         </section>
-        <section class="page-content">
-            <div class="sub-section">
-                <h2>Amazing Grace Online and in the News</h2>
-                <p></p>
-                <ul>
-                    <li>Falmouth Community TV speaks with Julie Lytle about Amazing Grace, click&nbsp;
-                        <a href="https://www.youtube.com/watch?v=ITaOTDOwZog" target="_blank">here</a>.
-                    </li>
-                    <li>CapeCod.com's Sunday Journal podcast with Matt Pitta, click&nbsp;
-                        <a href="https://www.capecod.com/newscenter/sunday-journal-amazing-grace/" target="_blank">here</a>.
-                    </li>
-                    <li>Dr. Meghan Sullivan on "The Developmental Impact of Incarceration on Children" 
-                        (Includes Amazing Grace History from Julie Lytle) &nbsp;- YouTube, click&nbsp;
-                        <a href="https://www.youtube.com/watch?v=167pACjr4FU" target="_blank">here</a>.
-                    </li>
-                    <li>Julie Lytle and Megan Sullivan talk about the impact of incarceration on 
-                        children with Mindy Todd, click 
-                        <a href="http://capeandislands.org/post/children-incarcerated-parents" target="_blank">here</a>.&nbsp;
-                    </li>
-                    <li>Cape Cod Volunteers, click <a href="http://www.capecodvolunteers.org/agency/detail/?agency_id=70928" target="_blank">
-                        here</a>. &nbsp;&nbsp;
-                    </li>
-                    <li>Alternative markets today on Cape offer chance to give back, click 
-                        <a href="http://www.ack.net/news/20161113/alternative-markets-today-on-cape-offer-chance-to-give-back" target="_blank">
-                            here</a>. &nbsp;&nbsp;&nbsp;
-                    </li>
-                    <li>Celebrating the positive for children with a parent in prison, click 
-                        <a href="http://www.capecodtimes.com/article/20140914/LIFE/140919881" target="_blank">here</a>.
-                    </li>
-                    <li>Amazing Grace Is... &nbsp;Cape and Islands Deanery Presentation, click 
-                        <a href="http://capeislandsdeanery.org/mailings/2016-17/AmazingGrace_Presentation_2017_0315.pptx" target="_blank">here</a>
-                        .
-                    </li>
-                    <li>Amazing Grace's 501(c)(3) classification, click 
-                        <a href="https://charitylook.org/amazing-grace-of-cape-cod-inc-364798715/" target="_blank">here</a>.
-                    </li>
-                    <li>The camp's first season was reported by the Cape Cod Times, click&nbsp;
-                        <a href="http://www.stdavids4222.comcastbiz.net/amazing_grace__a_camp_for_child.html">here</a>.
-                    </li>
-                </ul>
-            </div>
-            
+        <section class="page-content" id="gdoc-content">
+            <!-- Google doc content will be inserted here via javascript. -->
         </section>
     </main>
     <footer>
