--- a/volunteer.html
+++ b/volunteer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="page-name" content="volunteer">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,8 +16,10 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
     <script src="./resources/scripts/menu.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="./resources/scripts/loadsheet.js"></script>
 
-    <title>Amazing Grace of Cape Cod--About us</title>
+    <title>Amazing Grace of Cape Cod--Volunteer</title>
 </head>
 <body>
     <header>
@@ -93,98 +96,8 @@
                 
             </div>
         </section>
-        <section class="page-content">
-            <div class="sub-section">
-                <h2>Volunteering</h2>
-                <p>It takes a community to create and offer a camp experience and a year-round program. Whether you have an hour, a day, or a week, 
-                    there are many ways you can share your gifts and passions.  We need volunteers to work with children at 
-                    the week of camp and at our monthly activities, and we also need volunteers to help us create programming, 
-                    promote our work, and oversee administrative tasks.</p>
-            </div>
-            <div class="sub-section volunteer-jobs">
-                <h2>Volunteer opportunities</h2>
-                <ul>
-                    <li>
-                        <p><strong>Camp Mentor:</strong> Interact with our amazing kids during morning, afternoon, or overnight shifts 
-                            the week of camp. </p>
-                    </li>
-                    <li>
-                        <p><strong>Camp Specialist:</strong> Offer 1-3 hours during the week of camp, sharing a skill or talent.</p>
-                    </li>
-                    <li>
-                        <p><strong> Activity Volunteer:</strong> Interact with our amazing kids at school-year activities and events.
-                            </p>
-                    </li>
-                    <li>
-                        <p><strong>Program Developer:</strong> Help us find and create fun things for our Amazing Grace kids to do at camp and/or 
-                            at monthly gatherings. </p>
-                    </li>
-                    <li>
-                        <p><strong>Amazing Grace Story-Teller:</strong> Help us spread the word about Amazing Grace and its work. </p>
-                    </li>
-                    <li>
-                        <p><strong>Recruiter:</strong> Help us find kids to join our program, and help us find volunteers to support our work.</p>
-                    </li>
-                    <li>
-                        <p><strong>Fundraiser:</strong> Help us find financial support to do our work.</p>
-                    </li>
-                    <li>
-                        <p><strong>Implementer:</strong> Help us with behind-the-scenes support.</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="sub-section">
-                <h2>Download the application</h2>
-                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf">Download the Amazing Grace volunteer application.</a>
-                    (You will need <a href="https://get.adobe.com/reader/">Adobe Reader</a> to view and print the application.)</p>
-                <p>Print the application, fill it out, and mail it to</p>
-                <p>Amazing Grace of Cape Cod Inc.<br/>
-                    P.O. Box 636<br/>
-                    Centerville, MA 02632 </p>
-            </div>
-            <div class="sub-section">
-                <h2>Inquire about volunteering</h2>
-                <p>Interested in learning more before you volunteer?  <a href="contact.html">Contact us</a>, or fill out our  
-                    <a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2">online volunteer inquiry form</a>, 
-                    and we will contact you to talk more about how you might get involved.
-                    You can also print and mail a <a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf">paper volunteer inquiry form</a>.</p>
-            </div>
-            <div class="sub-section">
-                <h2>More about volunteering at camp</h2>
-                <p>We will do our best to match your preferences with the scheduling needs of our children.  Our camp director 
-                    will arrange an interview with each first-time volunteer. </p>
-                <p>Camp volunteers (mentors and specialists) work directly with our amazing kids, and have a significant 
-                    impact on the quality of our programs.  We hold our camp volunteers to some high expectations, including the following:</p>
-                <ul>
-                    <li>
-                        <p>Commitment to our <a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf">volunteer covenant</a>.</p>
-                    </li>
-                    <li>
-                        <p>Background checks:</p>
-                        <ul>
-                            <li><p>Criminal offender Criminal Offender Record Information (CORI) and</p></li> 
-                            <li><p>Sex Offender Record Information (SORI).</p></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <p>Complete a set of modules from Expert Online Training about working with children at camp and 
-                            maintaining a safe environment for the campers. 
-                            Log-in information will be sent after your volunteer application has been accepted, and you have until the end of July to complete them.</p>
-                    </li>
-                    <li><p>Attending volunteer training events:</p></li>
-                        <ul>
-                            <li><p><strong>Volunteer Q&amp;A and forum: “Incarceration and Its Impact on Families, Society, and Us,” </strong> planned for an evening 
-                                in <strong>June.</strong>  The details will be firmed up by early May.</p></li>
-                            <li><p><strong>Mandatory for all camp volunteers: Policies, Procedures, and Practices Training</strong> followed by dinner for 
-                                all who will be working onsite at Camp Burgess. <strong>Saturday, August 17, 1:00-6:30 pm; </strong>  
-                                Volunteers are  encouraged to spend the Saturday night at Base Camp and help prepare everything for camp on 
-                                Sunday, August 18, 9 am–noon. </p></li> 
-                            <li><p><strong>All camp volunteers: Meet the Campers and their Caregivers.</strong> 
-                                Volunteers are asked to be present on <strong> Sunday, August 18, 1:00-3:00pm </strong> to start tent identity activities. </p></li>
-                        </ul>
-                </ul>
-                <p>For more details view the <a href="./resources/pdfs/AG_CampMentor_Job Description.pdf">Camp Mentor job description</a>.</p>
-            </div>
+        <section class="page-content" id="gdoc-content">
+                <!-- Google doc content will be inserted here via javascript. -->
         </section>
     </main>
     <footer>
