--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="page-name" content="forms">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
     
     <script src="./resources/scripts/menu.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="./resources/scripts/loadsheet.js"></script>
 
     <title>Amazing Grace of Cape Cod--Forms</title>
 </head>
@@ -91,30 +94,8 @@
                 <h2>Forms</h2>
             </div>
         </section>
-        <section class="page-content">
-            <div class="sub-section">
-                <h2>Online forms</h2>
-                <p><a href="https://goo.gl/forms/FZBULNh9GIEa6Jfr2" target="_blank">General contact form</a></p>
-                <p><a href="https://goo.gl/forms/ILHJ5h75zVBtd8ZA2" target="_blank">Camper inquiry form</a></p>
-                <p><a href="https://goo.gl/forms/UQdqJWeXM7Nvspos2" target="_blank">Volunteer inquiry form</a></p>
-                <h4>Donate online using Paypal</h4>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="3YQNM4VPXRRRY">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-            </div>
-            <div class="sub-section">
-                <h2>Printable forms</h2>
-                <p><a href="resources/pdfs/AmazingGrace_FullApplication.pdf"> 2019 Camper application</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_camper_inquiry.pdf" target="_blank">Camper inquiry form</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_VolunteerApplication.pdf" target="_blank">Volunteer application </a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_volunteer_inquiry.pdf" target="_blank">Volunteer inquiry form </a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_VolunteerCovenant.pdf" target="_blank">Volunteer covenant</a></p>
-                <p><a href="./resources/pdfs/AG_CampMentor_Job Description.pdf" target="_blank">Camp mentor job description</a></p>
-                <p><a href="./resources/pdfs/AmazingGrace_donor_form.pdf" target="_blank">Donation form</a></p>
-            </div>
+        <section class="page-content" id="gdoc-content">
+            <!-- Google doc content will be inserted here via javascript. -->
         </section>
     </main>
     <footer>
