Update index with 2020 dates.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
 			</section>
 			<section class="site-map">
 				<div class="gallery">
+					<a href="./participate.html" target="_blank">
+						<div class="sticky page-launcher">
+							<img src="./resources/images/page-launchers/download-app.jpg" alt=""/>
+								<div class="caption">
+								<h2>Join us August 23-28, 2020</h2>
+								<p>Click to learn more</p>
+								</div>
+						</div>
+					</a>
 					<a href="about.html">
 					<div class="page-launcher">
 						<img src="./resources/images/page-launchers/about.jpg" alt=""/>
