--- a/activities.html
+++ b/activities.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
-        <nav class="desktop">
+		<nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./activities.html">Activities</a></li>
@@ -29,6 +29,7 @@
                 <li><a href="./participate.html">Participate</a></li>
                 <li><a href="./volunteer.html">Volunteer</a></li>
                 <li><a href="./donate.html">Donate</a></li>
+                <li><a href="./sponsors.html">Sponsors</a></li>
                 <li><a href="./forms.html">Forms</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -43,6 +44,7 @@
                             <a href="./about.html">About</a>
                             <a href="./activities.html">Activities</a>
                             <a href="./impact.html">Impact</a>
+                            <a href="./sponsors.html">Sponsors</a>
                             <a href="./contact.html">Contact</a>
                         </div>
                     </div>
@@ -73,6 +75,7 @@
                             <a href="./participate.html">Participate</a>
                             <a href="./volunteer.html">Volunteer</a>
                             <a href="./donate.html">Donate</a>
+                            <a href="./sponsors.html">Sponsors</a>
                             <a href="./forms.html">Forms</a>
                             <a href="./contact.html">Contact</a>
                         </div>
