--- a/employment.html
+++ b/employment.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <a href="./index.html"><img class="logo-text" src="./resources/images/logo_text.png"/></a>	
-        <nav class="desktop">
+		<nav class="desktop">
             <ul>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./activities.html">Activities</a></li>
@@ -30,6 +30,7 @@
                 <li><a href="./participate.html">Participate</a></li>
                 <li><a href="./volunteer.html">Volunteer</a></li>
                 <li><a href="./donate.html">Donate</a></li>
+                <li><a href="./sponsors.html">Sponsors</a></li>
                 <li><a href="./forms.html">Forms</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -44,6 +45,7 @@
                             <a href="./about.html">About</a>
                             <a href="./activities.html">Activities</a>
                             <a href="./impact.html">Impact</a>
+                            <a href="./sponsors.html">Sponsors</a>
                             <a href="./contact.html">Contact</a>
                         </div>
                     </div>
@@ -74,6 +76,7 @@
                             <a href="./participate.html">Participate</a>
                             <a href="./volunteer.html">Volunteer</a>
                             <a href="./donate.html">Donate</a>
+                            <a href="./sponsors.html">Sponsors</a>
                             <a href="./forms.html">Forms</a>
                             <a href="./contact.html">Contact</a>
                         </div>
