--- a/sponsors.html
+++ b/sponsors.html
@@ -8,6 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" href="./resources/images/favicon.ico" />
 
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
   <link rel="stylesheet" type="text/css" href="./resources/css/reset.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
@@ -99,6 +103,12 @@
     <section class="page-content" id="gdoc-content">
       <!-- Google doc content will be inserted here via javascript. -->
     </section>
+    <section class="page-content">
+      <ul class="nav nav-tabs" id="sponsors-nav">
+
+      </ul>
+      <!-- Content will be inserted here via javascript. -->
+    </section>
   </main>
   <footer>
     <div class="footer-text-container">
@@ -113,7 +123,16 @@
   </footer>
   <script src="./resources/scripts/menu.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"></script>
-  <script src="./resources/scripts/loadsheet.js"></script>
+
+  <!-- Jquery and bootstrap -->
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+
+  <script src="./resources/scripts/sponsors.js"></script>
+
 
 </body>
 
