--- a/sponsors.html
+++ b/sponsors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="page-name" content="sponsors">
+  <meta name="page-name" content="sponsors2">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
