--- a/sponsors.html
+++ b/sponsors.html
@@ -104,10 +104,12 @@
       <!-- Google doc content will be inserted here via javascript. -->
     </section>
     <section class="page-content">
-      <ul class="nav nav-tabs" id="sponsors-nav">
-
+      <ul class="nav nav-tabs" id="sponsors-nav" role="tablist">
+        <!-- Content will be inserted here via javascript. -->
       </ul>
-      <!-- Content will be inserted here via javascript. -->
+      <div class="tab-content" id="sponsors-tab-content">
+        <!-- Content will be inserted here via javascript. -->
+      </div>
     </section>
   </main>
   <footer>
