--- a/sponsors.html
+++ b/sponsors.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" type="text/css" href="./resources/css/reset.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./resources/css/sponsors.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/menu.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/tablet.css" />
   <link rel="stylesheet" type="text/css" href="./resources/css/mobile.css" />
