--- a/sponsors.html
+++ b/sponsors.html
@@ -104,7 +104,7 @@
     <section class="page-content" id="gdoc-content">
       <!-- Google doc content will be inserted here via javascript. -->
     </section>
-    <section class="page-content">
+    <section class="page-content px-3">
       <ul class="nav nav-tabs" id="sponsors-nav" role="tablist">
         <!-- Content will be inserted here via javascript. -->
       </ul>
