--- a/sponsors.html
+++ b/sponsors.html
@@ -21,7 +21,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
 
-  <title>Amazing Grace of Cape Cod--About us</title>
+  <title>Amazing Grace of Cape Cod--Sponsors</title>
 </head>
 
 <body>
